--- a/learn_sets/floodfill/.vscode/settings.json
+++ b/learn_sets/floodfill/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "*.tcc": "cpp",
-        "map": "cpp"
+        "map": "cpp",
+        "iostream": "cpp",
+        "vector": "cpp"
     }
 }
