--- a/learn_sets/backtracking/input.in
+++ b/learn_sets/backtracking/input.in
@@ -1,37 +1,33 @@
-4
-0 6 0 1 0 4 0 5 0
-0 0 8 3 0 5 6 0 0
-2 0 0 0 0 0 0 0 1
-8 0 0 4 0 7 0 0 6
-0 0 6 0 0 0 3 0 0
-7 0 0 9 0 1 0 0 4
-5 0 0 0 0 0 0 0 2
-0 0 7 2 0 6 9 0 0
-0 4 0 5 0 8 0 7 0
-0 6 0 1 0 4 0 5 0
-0 0 8 3 0 5 6 0 0
-2 0 0 0 0 0 0 0 1
-8 0 0 4 0 7 0 0 6
-0 0 6 0 0 0 3 0 0
-7 0 0 9 0 1 0 0 4
-5 0 0 0 0 0 0 0 2
-0 0 7 2 0 6 9 0 0
-0 4 0 5 0 8 0 7 9
-0 6 0 1 0 4 0 5 0
-0 0 8 3 0 5 6 0 0
-2 0 0 0 0 0 0 0 1
-8 0 0 4 0 7 0 0 6
-0 0 6 0 0 0 3 0 0
-7 0 0 9 0 1 0 0 4
-5 0 0 0 0 0 0 0 2
-0 0 7 2 0 6 9 0 0
-0 4 0 5 0 8 0 7 0
-0 6 0 1 0 4 0 5 0
-0 0 8 3 0 5 6 0 0
-2 0 0 0 0 0 0 0 1
-8 0 0 4 0 7 0 0 6
-0 0 6 0 0 0 3 0 0
-7 0 0 9 0 1 0 0 4
-5 0 0 0 0 0 0 0 2
-0 0 7 2 0 6 9 0 0
-0 4 0 5 0 8 0 7 9
+2 4
+ab
+cd
+a 1 .
+b 2 .
+c 2 .
+d 1 .
+6 18
+aabccd
+aeeffd
+ghiijj
+ggkkll
+mnnoop
+qqnorp
+a 80 *
+b 3 .
+c 5 -
+d 2 /
+e 11 +
+f 1 -
+g 9 *
+h 2 .
+i 3 -
+j 30 *
+k 11 +
+l 2 /
+m 6 .
+n 8 *
+o 13 +
+p 8 +
+q 10 *
+r 1 .
+0
