--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
-        "vector": "cpp",
-        "iostream": "cpp"
+      "vector": "cpp",
+      "iostream": "cpp",
+      "equiroaster.C": "cpp",
+      "type_traits": "cpp",
+      "ostream": "cpp"
     }
 }
