--- a/learn_sets/datastructs/input.in
+++ b/learn_sets/datastructs/input.in
@@ -1,17 +1,9 @@
-3 5
-STEVENS
-MICHAELS
-JORDAN
-BOB JORDAN
-JACK STEVENS
-MACK MICHAELS
-BILL JORDAN
-CHRIS MATTHEWS
-1 5
-FRED
-SAM FRED
-ARTHUR GEORGE
-DANIEL HERBERT
-MARK GEORGE
-MIKE HERBERT
-0 0
+8 5000
+MATH 1000
+BIOLOGY 2000
+CHEMISTRY 1500
+ENGLISH 1500
+HISTORY 1300
+PHYSICS 2200
+SPANISH 1800
+CIVICS 800
