--- a/codeforces/locals/2017/input.in
+++ b/codeforces/locals/2017/input.in
@@ -1,9 +1,1 @@
-2
-7
-39 20 57 54 14 38 31
-7 31
-3 39
-3
-15 30 20
-1 12
-3 3
+2 4 ORLANDO 10 TAMPA 15 MIAMI 5 JACKSONVILLE 10 7 TAMPA JACKSONVILLE AIR 100 MIAMI TAMPA SEA 70 JACKSONVILLE MIAMI RAIL 45 ORLANDO JACKSONVILLE TRUCK 85 TAMPA ORLANDO RAIL 10 MIAMI JACKSONVILLE SEA 15 ORLANDO MIAMI TRUCK 15 JACKSONVILLE TAMPA 2 ORLANDO 15 TAMPA 10 3 ORLANDO TAMPA AIR 7 TAMPA ORLANDO TRUCK 3 ORLANDO TAMPA RAIL 19 ORLANDO TAMPA
