SPOJ string hashing

--- a/learn_sets/strings/input.in
+++ b/learn_sets/strings/input.in
@@ -1,9 +1,9 @@
-4 
-lana 
-nala 
-abcdefg 
-efgabcd 
-abcdefg 
-bagfedc 
-abcdefg 
-opqrstu
+2
+na
+banananobano
+6
+foobar
+foo
+9
+foobarfoo
+barfoobarfoobarfoobarfoobarfoo
