--- a/learn_sets/dp2/.vscode/settings.json
+++ b/learn_sets/dp2/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
   "files.associations": {
     "*.tcc": "cpp",
-    "istream": "cpp"
+    "istream": "cpp",
+    "future": "cpp",
+    "functional": "cpp",
+    "regex": "cpp"
   }
 }
